[project]
name = "cse559"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = [
    "torch",
    "numpy>=2.1.2",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "ipykernel>=6.29.5",
    "imageio>=2.37.0",
    "torchvision",
    "torchmetrics>=1.0.3",
    "tqdm>=4.66.5",
    "scikit-image>=0.25.2",
    "mediapy>=1.2.2",
    "opencv-python>=4.11.0.86",
    "seaborn>=0.13.2",
    "scikit-learn>=1.6.1",
    "pip>=25.1",
    "tensorflow>=2.19.0",
    "keras>=3.9.2",
    "retina-face>=0.0.17",
    "tf-keras>=2.19.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]


